--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -48,7 +48,7 @@
     }
     
     .maxHeight {
-        max-height: 1000px;
+        max-height: 5000px;
     }
     
     .zeroHeight {
@@ -144,6 +144,14 @@
         
         @media #{$md} {
             margin-bottom:0;
+        }
+    }
+    
+    .explanation-text {
+        margin-top:30px;
+        
+        p {
+            margin-top:20px;
         }
     }
 }
