--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -148,10 +148,20 @@
     }
     
     .explanation-text {
-        margin-top:30px;
+        margin-top:50px;
         
-        p {
-            margin-top:20px;
+        .text {
+            margin-top:50px;
+            margin-bottom:20px;
+            
+            @media #{$md} {
+                margin-top:0px;
+                margin-bottom:0px;
+            }
+            
+            p {
+                margin-top:10px;
+            }
         }
     }
 }
