Added Adventure Finder App
Added a case study on the portfolio page

--- a/css/_common.scss
+++ b/css/_common.scss
@@ -176,6 +176,11 @@ p {
             .popup-content {
                 .image-wrapper {
                     display:block;
+                    text-align:center;
+                }
+                
+                img {
+                    margin:0 auto;
                 }
 
                 a.close-popup {
