--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -10,6 +10,7 @@
         margin-top:20px;
         display:inline-block;
         text-transform: uppercase;
+        text-decoration: none;
         
 //        span:before {
 //            content:"See";
