--- a/css/styles.css
+++ b/css/styles.css
@@ -254,8 +254,12 @@ p {
       position: relative; }
       /* line 177, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_common.scss */
       .background .popup-wrapper .popup .popup-content .image-wrapper {
-        display: block; }
-      /* line 181, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_common.scss */
+        display: block;
+        text-align: center; }
+      /* line 182, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_common.scss */
+      .background .popup-wrapper .popup .popup-content img {
+        margin: 0 auto; }
+      /* line 186, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_common.scss */
       .background .popup-wrapper .popup .popup-content a.close-popup {
         background-color: #ffffff;
         border: 2px solid #1c1d21;
@@ -277,35 +281,35 @@ p {
         cursor: pointer;
         margin-top: 10px;
         margin-bottom: 10px; }
-        /* line 203, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_common.scss */
+        /* line 208, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_common.scss */
         .background .popup-wrapper .popup .popup-content a.close-popup:hover, .background .popup-wrapper .popup .popup-content a.close-popup:focus {
           background-color: #1c1d21;
           color: #ffffff; }
 
-/* line 213, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_common.scss */
+/* line 218, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_common.scss */
 .hide {
   display: none; }
 
-/* line 216, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_common.scss */
+/* line 221, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_common.scss */
 .show {
   display: block; }
 
 /*Responsive video*/
-/* line 238, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_common.scss */
+/* line 243, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_common.scss */
 .video-wrapper {
   width: 100%;
   height: 100%;
   margin: 0 auto;
   background: #CCC; }
-  /* line 244, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_common.scss */
+  /* line 249, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_common.scss */
   .video-wrapper .video-inner-wrapper {
     position: relative; }
-  /* line 247, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_common.scss */
+  /* line 252, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_common.scss */
   .video-wrapper .ratio {
     display: block;
     width: 100%;
     height: auto; }
-  /* line 252, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_common.scss */
+  /* line 257, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_common.scss */
   .video-wrapper iframe {
     position: absolute;
     top: 0;
@@ -608,13 +612,14 @@ p {
   cursor: pointer;
   margin-top: 20px;
   display: inline-block;
-  text-transform: uppercase; }
-  /* line 18, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+  text-transform: uppercase;
+  text-decoration: none; }
+  /* line 19, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
   .portfolio a.see-project.toggle-link:hover, .portfolio a.see-project.toggle-link:focus {
     color: #ffffff;
     background-color: #f26414; }
 
-/* line 32, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+/* line 33, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
 .portfolio a.close {
   background-image: url("../img/x-button.png");
   display: block;
@@ -627,15 +632,15 @@ p {
   -wekbit-transition: background-image 0.3s ease-in-out;
   -moz-transition: background-image 0.3s ease-in-out;
   transition: background-image 0.3s ease-in-out; }
-  /* line 45, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+  /* line 46, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
   .portfolio a.close:hover, .portfolio a.close:focus {
     background-position: 0px 0px; }
 
-/* line 50, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+/* line 51, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
 .portfolio .maxHeight {
   max-height: 5000px; }
 
-/* line 54, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+/* line 55, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
 .portfolio .zeroHeight {
   max-height: 0px !important;
   -webkit-box-sizing: border-box;
@@ -644,7 +649,7 @@ p {
   line-height: 0px;
   padding-bottom: 0px; }
 
-/* line 63, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+/* line 64, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
 .portfolio a.button {
   text-transform: uppercase;
   display: inline-block;
@@ -656,19 +661,19 @@ p {
   -wekbit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
   transition: all 0.3s ease; }
-  /* line 75, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+  /* line 76, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
   .portfolio a.button.orange {
     border: 2px solid #f26414;
     color: #f26414; }
-    /* line 79, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+    /* line 80, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
     .portfolio a.button.orange:hover, .portfolio a.button.orange:focus {
       color: #ffffff;
       background-color: #f26414; }
-      /* line 83, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+      /* line 84, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
       .portfolio a.button.orange:hover .video, .portfolio a.button.orange:focus .video {
         background-position: -39px -27px; }
 
-/* line 90, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+/* line 91, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
 .portfolio .category-icon {
   background-image: url("../img/category-icons.png");
   display: inline-block;
@@ -677,67 +682,67 @@ p {
   -wekbit-transition: background-image 0.3s ease-in-out;
   -moz-transition: background-image 0.3s ease-in-out;
   transition: background-image 0.3s ease-in-out; }
-  /* line 99, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+  /* line 100, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
   .portfolio .category-icon.video {
     width: 24px;
     height: 24px;
     background-position: -39px 0px;
     margin-top: -5px; }
 
-/* line 107, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+/* line 108, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
 .portfolio .more-content {
   margin-top: 25px;
   margin-bottom: 20px; }
 
-/* line 112, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+/* line 113, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
 .portfolio .orange-border {
   margin-top: 30px;
   border-top: 2px solid #f26414;
   height: 4px; }
 
-/* line 118, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+/* line 119, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
 .portfolio .close-button {
   color: #f26414;
   font-size: 50px;
   -wekbit-transition: all 0.2s ease;
   -moz-transition: all 0.2s ease;
   transition: all 0.2s ease; }
-  /* line 125, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+  /* line 126, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
   .portfolio .close-button:hover, .portfolio .close-button:focus {
     color: #00AAB2; }
 
-/* line 130, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+/* line 131, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
 .portfolio .portfolio-content {
   overflow: hidden;
   -wekbit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out; }
-  /* line 136, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+  /* line 137, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
   .portfolio .portfolio-content.details {
     padding-top: 0px; }
 
-/* line 141, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+/* line 142, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
 .portfolio .portfolio-thumbail {
   margin: 0 auto;
   margin-bottom: 25px; }
   @media (min-width: 768px) {
-    /* line 141, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+    /* line 142, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
     .portfolio .portfolio-thumbail {
       margin-bottom: 0; } }
 
-/* line 150, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+/* line 151, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
 .portfolio .explanation-text {
   margin-top: 50px; }
-  /* line 153, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+  /* line 154, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
   .portfolio .explanation-text .text {
     margin-top: 50px;
     margin-bottom: 20px; }
     @media (min-width: 768px) {
-      /* line 153, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+      /* line 154, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
       .portfolio .explanation-text .text {
         margin-top: 0px;
         margin-bottom: 0px; } }
-    /* line 162, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
+    /* line 163, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_portfolio.scss */
     .portfolio .explanation-text .text p {
       margin-top: 10px; }
 
