--- a/css/_common.scss
+++ b/css/_common.scss
@@ -1,5 +1,3 @@
-@import "_variables.scss";
-
 body {
    font-family: $armino;
     position:relative;
@@ -47,78 +45,6 @@ body {
     padding-bottom:70px;
 }
 
-/*text styles*/
-h1 {
-    font-size:66px;
-    text-transform: uppercase;
-    font-weight:700;
-    font-family: $armino;
-    
-    &.orange {
-        color:$orange;
-    }
-    
-    &.yellow {
-        color:$yellow;
-    }
-}
-
-h2 {
-    color:$dark-grey;
-    font-size:30px;
-    line-height:33px;
-    text-transform: uppercase;
-    font-weight:700;
-    font-family: $armino;
-    letter-spacing:0.02em;
-    margin-bottom:10px;
-    
-    @media #{$md} {
-        font-size:35px;
-        line-height: 40px;
-    }
-}
-
-h3 {
-    font-size:26px;
-    font-weight:700;
-    line-height:26px;
-    font-family: $armino;
-}
-
-h4 {
-    font-size:20px;
-    text-transform:uppercase;
-    
-    @media #{$md} {
-        font-size:25px;
-    }
-    
-    &.white {
-        color:$white;
-    }
-}
-
-p {
-    font-size:20px;
-    line-height:26px;
-    color:#58595B;
-    font-family: $armino;
-    
-    @media #{$md} {
-        font-size:22px;
-        line-height:30px;
-    }
-    
-    &.orange {
-        color:$orange;
-    }
-}
-
-.bold {
-    font-weight:700;
-}
-
 .img-fluid-inline-block {
     display:inline-block;
     max-width: 100%;
@@ -146,73 +72,6 @@ p {
 .center-content {
     justify-content: center;
     align-items: center;
-}
-
-/*lightbox styles*/
-
-.background {
-    background-color:rgba(0, 0, 0, 0.75);
-    z-index:9001;
-    position:fixed;
-    top: 0px;
-    left: 0px;
-    right:0px;
-    bottom:0px;
-    overflow-y: auto;
-    width: 100%;
-    height:100%;
-    
-    .popup-wrapper {
-        position:relative;
-        z-index:9002;
-        
-        .popup {
-            margin-left:auto;
-            margin-right:auto;
-            z-index:9003;
-            margin-top:30px;
-            position:relative;
-
-            .popup-content {
-                .image-wrapper {
-                    display:block;
-                    text-align:center;
-                }
-                
-                img {
-                    margin:0 auto;
-                }
-
-                a.close-popup {
-                    background-color:$white;
-                    border:2px solid $dark-blue;
-                    color:$dark-blue;
-                    z-index: 9005;
-                    display:block;
-                    font-size: 18px;
-                    padding: 10px;
-                    text-decoration: none;
-                    width:100px;
-                    text-transform: uppercase;
-                    font-weight:700;
-                    font-family:$armino;
-                    letter-spacing:0.05em;
-                    -webkit-transition: background 0.3s ease-in-out;
-                    -moz-transition: background 0.3s ease-in-out;
-                    -ms-transition: background 0.3s ease-in-out;
-                    transition: background 0.3s ease-in-out;
-                    cursor: pointer;
-                    margin-top:10px;
-                    margin-bottom:10px;
-                    
-                    &:hover, &:focus {
-                        background-color:$dark-blue;
-                        color:$white;
-                    }
-                }
-            }
-        }
-    }
 }
 
 .hide {  
@@ -260,5 +119,11 @@ p {
         left:0;
         width:100%; 
         height:100%;
+    }
+}
+
+@media (min-width: 1200px) {
+    .container{
+        max-width: 1200px;
     }
 }
