--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -1,26 +1,35 @@
-@import "_variables.scss";
-
 .contact {
     .content {
         padding-top:30px;
         padding-bottom:30px;
-        
+
         @media #{$md} {
             padding-top:50px;
             padding-bottom:50px;
         }
     }
-    
+
     p.email {
         margin-top:10px;
     }
-    
-    .contact-illustration {
-        margin:0 auto;
-        margin-bottom:30px;
-        
-        @media #{$sm-down} {
-            margin-bottom:0px;
+
+    .contact-wrapper {
+        display:flex;
+        justify-content: space-between;
+        align-items: center;
+        width:100%;
+
+        .text {
+            width:57%;
+        }
+
+        .illustration {
+            margin:0 auto;
+            margin-top:30px;
+
+            @media #{$md-up} {
+                margin:0;
+            }
         }
     }
 }
