--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,6 +1,6 @@
-@import "_variables.scss";
-
 .header {
+    @import "nav";
+    
     background-color:$dark-blue;
     padding-top:50px;
     padding-bottom:20px;
@@ -9,173 +9,6 @@
         padding-top:50px;
         padding-bottom:30px;
         margin-left:20px;
-    }
-    
-    .nav-container {
-        justify-content: space-between;
-        align-items:center;
-        
-        a.logo {
-            vertical-align:middle;
-            background-image:url("../img/logo.png");
-            width:72px;
-            height:69px;
-            display:block;
-            margin-bottom:10px;
-            cursor: pointer;
-
-            @media #{$md} {
-                margin-bottom:0px;
-                margin-left:20px;
-                display:inline-block;
-            }
-        }
-        
-        nav.mobile-nav-button-container {
-            position:relative;
-            
-            button.mobile-nav {
-                font-size:60px;
-                color:$white;
-                width:50px;
-                position:absolute;
-                top: 15px;
-                right: 15px;
-            }
-        }
-        
-        .nav-content-container {
-            position:relative;
-            
-            .nav-content {
-                text-align:right;
-                background-color:#343942;
-                width:220px;
-                padding:60px 20px;
-                position: absolute;
-                top: -129px;
-                right: -15px;
-                height: 100vh;
-                z-index:1000;
-                -webkit-transition: all 0.2s ease-in-out;
-                -moz-transition: all 0.2s ease-in-out;
-                transition: all 0.2s ease-in-out;
-            }
-            
-            .close-button {
-                color:$white;
-                font-size: 50px;
-                position: absolute;
-                top: 0px;
-                right: 5px;
-            }
-        }
-        
-        ul.nav {
-            text-align:left;
-            margin-left:0px;
-            margin-bottom:25px;
-            display:block;
-            width:100%;
-
-            @media #{$sm} {
-                display:inline-block;
-                margin-left:10px;
-                width:auto;
-            }
-
-            li {
-                padding:0px;
-                padding-bottom:15px;
-                display:block;
-
-                @media #{$md} {
-                    list-style-type:none;
-                    display:inline-block;
-                    padding:10px;
-                }
-
-                a {
-                    color:$white;
-                    font-size:16px;
-                    text-transform: uppercase;
-                    text-decoration:none;
-                    padding-top:2px;
-                    font-family: $armino;
-                    letter-spacing:0.05em;
-                    cursor: pointer;
-
-                    &:hover, &:focus, &.active {
-                        color:$orange;
-
-                        @media #{$md} {
-                            color:$white;
-                            border-top:2px solid $orange;
-                        }
-                    }
-                }
-            }
-        }
-
-        ul.social-media {
-            margin-right:0px;
-            margin-top:0px;
-            text-align:left;
-            width:100%;
-
-            @media #{$md} {
-                margin-right:40px;
-                text-align:right;
-            }
-
-            li {
-                display:inline-block;
-
-
-                a.behance, a.linkedin, a.vimeo, a.youtube {
-                    height:26px;
-                    display:inline-block;
-                    background-image:url("../img/social-media-icons-white.png");
-                    background-repeat: no-repeat;
-                    cursor: pointer;
-
-                }
-                a.behance {
-                    background-position:0px -0px;
-                    margin-right:5px;
-                    width:41px;
-
-                    @media #{$md} {
-                        margin-right:10px;
-                    }
-                }
-
-                a.linkedin {
-                    background-position:-57px -0px;
-                    margin-right:5px;
-                    width:29px;
-
-                    @media #{$md} {
-                        margin-right:10px;
-                    }
-                }
-
-                a.vimeo {
-                    background-position:-101px -0px;
-                    margin-right:5px;
-                    width:31px;
-
-                    @media #{$md} {
-                        margin-right:10px;
-                    }
-                }
-
-                a.youtube {
-                    background-position:-143px -0px;
-                    width:38px;
-                }
-            }
-        }
     }
     
     .banner {
