--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -16,3 +16,15 @@ $lg:only screen and (min-width: 992px);
 
 /*Google font*/
 $armino:'Arimo', Arial, Helvetica sans-serif;
+
+// Small devices (landscape phones, 544px and up)
+$sm-up:"screen and (min-width: 544px) and (max-width:767px)";
+
+// Medium devices (tablets, 768px and up)
+$md-up:"screen and (min-width: 768px) and (max-width:991px)";
+
+// Large devices (desktops, 992px and up)
+$lg-up:"screen and (min-width: 992px) and (max-width:1199px)";
+
+// Extra large devices (large desktops, 1200px and up)
+$xl:"screen and (min-width: 1200px)";
