--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -1,16 +1,16 @@
 .footer {
     padding-top:20px;
     padding-bottom:20px;
-    background-color:$white;
+    background-color:#fff;
     background-image:url("../img/circle-bg-pattern.png");
     background-repeat: repeat;
     text-align:center;
-    
-    @media #{$md} {
+
+    @media #{$md-up} {
         padding-top:30px;
         padding-bottom:30px;
     }
-    
+
     .logo {
         margin-bottom:10px;
         vertical-align:middle;
@@ -21,17 +21,17 @@
         display:inline-block;
         cursor: pointer;
     }
-    
+
     .orange-underline {
         border-bottom:1px solid $orange;
         width:75%;
         margin:0 auto;
-        
-        @media #{$md} {
+
+        @media #{$md-up} {
             width:35%;
         }
     }
-    
+
     ul.nav {
         display:block;
         margin:15px 15px;
@@ -40,11 +40,11 @@
             list-style-type:none;
             display:inline-block;
             padding-right:10px;
-            
+
             &:last-child {
                 padding-right:0px;
             }
-            
+
             a {
                 color:#1C1D21;
                 font-size:14px;
@@ -61,7 +61,7 @@
             }
         }
     }
-    
+
     ul.social-media {
         margin-top:6px;
         margin-right:20px;
@@ -101,7 +101,7 @@
             }
         }
     }
-    
+
     p.copyright {
         font-size:12px;
         line-height:16px;
