--- a/css/_home.scss
+++ b/css/_home.scss
@@ -2,44 +2,93 @@
     .feature-work-wrapper {
         display:flex;
         justify-content: space-between;
+        flex-direction:column;
+
+        @media #{$md-up} {
+            flex-direction:row;
+        }
 
         a.featured-work {
-            width:48%;
             position:relative;
             cursor:pointer;
+            text-decoration:none;
+            margin-bottom:30px;
+            display: flex;
+            flex-direction: column;
+
+            &:last-child {
+                margin-bottom:0px;
+            }
+
+            @media #{$md-up} {
+                width:48%;
+                margin-bottom:0px;
+            }
 
             .overlay {
-                position:absolute;
-                top:0;
-                left:0;
-                width:100%;
-                height:100%;
-                background:rgba(0,170,178,.95);
-                text-align:center;
-                padding:40px;
-                opacity:0;
-                -webkit-transition: opacity 0.3s ease;
-                -moz-transition: opacity 0.3s ease;
-                transition: opacity 0.3s ease;
                 display:flex;
                 flex-direction:column;
                 justify-content:center;
+                background-color:#58595B;
+                text-align:center;
+                padding:60px 40px;
+                flex-grow:1;
+
+                @media #{$lg-up} {
+                    position:absolute;
+                    top:0;
+                    left:0;
+                    width:100%;
+                    height:100%;
+                    padding:40px;
+                    background:rgba(0,170,178,.95);
+                    opacity:0;
+                    -webkit-transition: opacity 0.3s ease;
+                    -moz-transition: opacity 0.3s ease;
+                    transition: opacity 0.3s ease;
+                }
 
                 h3 {
                     letter-spacing:0.05em;
-                    color:$white;
+                    color:#fff;
                     text-transform:uppercase;
                     margin-bottom:10px;
+
+                    &:after {
+                        content: '';
+                        display: block;
+                        height: 3px;
+                        width: 148px;
+                        margin:0 auto;
+                        background-color:#fff;
+                        -webskit-transition: width 0.25s ease-in-out, background-color 0.25s ease;
+                        -moz-transition: width 0.25s ease-in-out, background-color 0.25s ease;
+                        transition: width 0.25s ease-in-out, background-color 0.25s ease;
+                        margin-top:8px;
+
+                        @media #{$lg-up} {
+                            width: 0;
+                            background-color: transparent;
+                        }
+                      }
                 }
 
                 p {
-                    color:$white;
+                    color:#fff;
                 }
             }
 
             &:hover, &:focus {
                 .overlay {
                     opacity:1;
+
+                    h3:after {
+                        -webkit-transition-delay:0.2s;
+                        -moz-transition-delay:0.2s;
+                        transition-delay:0.2s;
+                        width:148px;
+                        background-color: #fff;
+                    }
                 }
             }
         }
@@ -50,17 +99,42 @@
         justify-content: space-between;
         align-items: center;
         width:100%;
+        flex-direction:column;
+
+        @media #{$md-up} {
+            flex-direction:row;
+        }
+
+        &.switch-order {
+            @media #{$md-up} {
+                .illustration {
+                    order:2;
+                }
+                .text {
+                    order:1;
+                }
+            }
+        }
 
         .text {
-            width:60%;
+            width:100%;
+
+            @media #{$md-up} {
+                width:45%;
+            }
+
+            @media #{$lg-up} {
+                width:55%;
+            }
         }
 
         .illustration {
             margin:0 auto;
-            margin-top:30px;
+            margin-bottom:30px;
 
             @media #{$md-up} {
                 margin:0;
+                text-align:left;
             }
         }
     }
