--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -201,3 +201,62 @@
         }
     }
 }
+
+.stills {
+    margin-left:-15px;
+    margin-right:-15px;
+
+    .photo-wrapper {
+        padding:15px;
+
+        &.x2 {
+            width:100%;
+            float:left;
+
+            @media #{$md-up} {
+                width:50%;
+            }
+        }
+
+        &.x3 {
+            width:100%;
+            float:left;
+
+            @media #{$md-up} {
+                width:33.33%;
+            }
+        }
+
+        &.full {
+            width:100%;
+        }
+    }
+}
+
+.intro-text {
+    margin-bottom:40px;
+}
+
+a.see-project {
+    font-size:18px;
+    color:$orange;
+    padding:10px 20px;
+    border:2px solid $orange;
+    cursor:pointer;
+    margin-top:20px;
+    display:inline-block;
+    text-transform: uppercase;
+    text-decoration: none;
+    -webkit-transition:all 0.2s ease;
+    -moz-transition:all 0.2s ease;
+    transition:all 0.2s ease;
+
+    &:hover, &:focus {
+        color:$white;
+        background-color:$orange;
+    }
+}
+
+
+@import "featured-work-banner";
+@import "adventure-finder";
