--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -13,6 +13,7 @@ $sm-down:only screen and (max-width: 767x);
 $sm-up:only screen and (min-width: 767px);
 $md-up:only screen and (min-width: 768px);
 $lg-up:only screen and (min-width: 992px);
+$xl-up:only screen and (min-width: 1200px);
 
 /*Google font*/
 $armino:'Arimo', Arial, Helvetica sans-serif;
